--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
 	<meta name='viewport' content='width=device-width'>
 
 	<title>Svelte app</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<link rel='stylesheet' href='./bundle.css'>
 
-	<link rel='stylesheet' href='bundle.css'>
 </head>
 
 <body>
   <div id="root"></div>
-	<script src='bundle.js'></script>
+	<script src='./bundle.js'></script>
 </body>
 </html>
