--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 	<title>Svelte app</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<link rel='stylesheet' href='./bundle.css'>
-
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/3799fd6eb4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
